fix(kcm): reset and default actions not reflected immediately

Seems as if ComboBoxes have some difficulty with the reset and default
actions in KCMs. This patch adds listeners to the reset and default
actions and triggers an update of the ComboBoxes.

Took inspirations from the Powerdevil KCM, which was having similar
issues with ComboBoxes. See: https://invent.kde.org/plasma/powerdevil/-/blob/089a47aecc57c6e064e3bc459087ffd84495febc/kcmodule/profiles/ui/main.qml#L72

BUG: 481450